--- a/fillPaintMaster/LiveViewController.xib
+++ b/fillPaintMaster/LiveViewController.xib
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LiveViewController">
             <connections>
-                <outlet property="scrollViewPortrait" destination="7OW-86-WdO" id="hVH-fO-YeT"/>
                 <outlet property="view" destination="hD4-6c-Pr1" id="YRO-Db-tPj"/>
             </connections>
         </placeholder>
@@ -15,37 +14,16 @@
         <view contentMode="scaleToFill" id="hD4-6c-Pr1">
             <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7OW-86-WdO">
-                    <rect key="frame" x="0.0" y="64" width="320" height="240"/>
-                    <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l4H-72-KHv" customClass="Monitor">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
-                            <animations/>
-                        </imageView>
-                    </subviews>
-                    <animations/>
-                    <constraints>
-                        <constraint firstItem="l4H-72-KHv" firstAttribute="top" secondItem="7OW-86-WdO" secondAttribute="top" id="6N1-VS-f3P"/>
-                        <constraint firstAttribute="bottom" secondItem="l4H-72-KHv" secondAttribute="bottom" id="Di5-69-4bO"/>
-                        <constraint firstItem="l4H-72-KHv" firstAttribute="leading" secondItem="7OW-86-WdO" secondAttribute="leading" id="FpC-89-XfJ"/>
-                        <constraint firstItem="l4H-72-KHv" firstAttribute="centerX" secondItem="7OW-86-WdO" secondAttribute="centerX" id="RZS-Gn-jgH"/>
-                        <constraint firstAttribute="trailing" secondItem="l4H-72-KHv" secondAttribute="trailing" id="dNs-HY-6ke"/>
-                        <constraint firstItem="l4H-72-KHv" firstAttribute="centerY" secondItem="7OW-86-WdO" secondAttribute="centerY" id="jtW-b4-F00"/>
-                    </constraints>
-                </scrollView>
-            </subviews>
             <animations/>
             <color key="backgroundColor" red="0.71682453459999995" green="1" blue="0.60469191280000001" alpha="1" colorSpace="calibratedRGB"/>
-            <constraints>
-                <constraint firstItem="7OW-86-WdO" firstAttribute="leading" secondItem="hD4-6c-Pr1" secondAttribute="leading" id="6DO-JS-HK5"/>
-                <constraint firstAttribute="trailing" secondItem="7OW-86-WdO" secondAttribute="trailing" id="OP3-Yn-c8W"/>
-                <constraint firstItem="7OW-86-WdO" firstAttribute="centerY" secondItem="hD4-6c-Pr1" secondAttribute="centerY" id="Rao-NS-qS3"/>
-                <constraint firstItem="7OW-86-WdO" firstAttribute="top" secondItem="hD4-6c-Pr1" secondAttribute="top" constant="64" id="ky9-I4-GTw"/>
-            </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
